<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MeetOnTime</string>
    <string name="app_name_spaced">Meet On Time</string>
    <string name="action_settings">Settings</string>
    <string name="newMeeting">New Event</string>
    <string name="joinMeeting">Join Event</string>
    <string name="joinMeetingHeaderText">Join Event</string>
    <string name="title_activity_create_meeting">CreateMeetingActivity</string>
    <string name="create_meeting_activity_header_text">Create Event</string>
    <string name="stringName">Name:</string>
    <string name="chooseInvitees">Invite people:</string>
    <string name="title_activity_new_meeting_location">NewMeetingLocationActivity</string>
    <string name="new_meeting_location_activity_header_text">Set Event Location</string>
    <string name="nextMapButton">Next</string>
    <string name="createMeetingButton">Create</string>
    <string name="namePrompt">Enter Name:</string>
    <string name="enterPNum">Enter Phone Number:</string>
    <string name="meetingTime">Event Time:</string>
    <string name="title_activity_join_meeting">JoinEvent</string>
    <string name="meetingID">Enter the Event ID:</string>
    <string name="meetingConnect">Connect</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="my_meetups_activity_header_text">My Events</string>
    <string name="userProfileText">My Events</string>
    <string name="userNameProfile">User</string>
    <string name="dateTime">Date/Time:</string>
    <string name="title_activity_meetup_list">MeetupListActivity</string>
    <string name="meetup_list_activity_header_text">My Events</string>
    <string name="title_activity_meetup_detail">MeetupDetailActivity</string>
    <string name="meetup_detail_activity_header_text">Event Details</string>
    <string name="meetup_detail_list_header">People Invited</string>
    <string name="rsvp">rsvp</string>

</resources>
