<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/main_activity_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/main_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="65dp"
            android:text="@string/app_name_spaced"
            android:textColor="#EEEEEE"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/newMeetingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/custom_button"
            android:padding="10dp"
            android:text="@string/newMeeting"
            android:textSize="20sp" />

        <Button
            android:id="@+id/joinMeetingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/custom_button"
            android:padding="10dp"
            android:text="@string/joinMeeting"
            android:textSize="20sp" />

        <Button
            android:id="@+id/meetingCheckButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/custom_button"
            android:padding="10dp"
            android:text="@string/userProfileText"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/loggedInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="hello"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/mainActivityRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/loggedInText"
        android:layout_marginLeft="10dp"
        android:text="4.5"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/userSettings"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="65dp"
        android:background="@drawable/gear"
        android:text="" />

</RelativeLayout>