<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.JS.meetontime.JoinMeeting"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:id="@+id/join_meetup_header_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/joinMeetingHeader"
                style="@style/ActivityHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/joinMeetingHeaderText" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/join_meetup_header_container"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/meetingIdText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meetingID"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/meetingIdValue"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number" />

        <Button
            android:id="@+id/meetingConnectButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button"
            android:text="@string/meetingConnect" />
    </LinearLayout>

</RelativeLayout>